candidates_backend/kubernetes/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: candidates-backend
    labels:
        app: candidates-backend
    namespace: flask-starter
spec:
    replicas: 1
    selector:
        matchLabels:
            app: candidates-backend
    template:
        metadata:
            labels:
                app: candidates-backend
        spec:
            containers:
                - name: candidates-backend-service
                  image: candidates_server:latest
                  imagePullPolicy: Never
                  ports:
                     - containerPort: 8000
                - name: candidates-backend-db
                  image: candidates_backend_db:latest
                  imagePullPolicy: Never
